--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
 
 
     namespace "com.cricgem"
-    compileSdk 34
+    compileSdk 35
 
 //    compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
@@ -67,10 +67,10 @@ android {
         applicationId "com.cricgem"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 34
-        targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        minSdkVersion 35
+        targetSdkVersion 34
+        versionCode 3
+        versionName "3"
     }
 
     buildTypes {
@@ -79,7 +79,7 @@ android {
             shrinkResources false
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
