--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   bubble_tab_indicator: ^0.1.6
   image_picker: ^1.1.0
-  speech_to_text: ^6.1.1
+ # speech_to_text: ^6.1.1
   flutter_svg_icons: ^0.0.1+4
   double_back_to_exit: ^1.0.3
   fluttertoast: ^8.2.5
@@ -106,6 +106,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/icon/
+    - assets/flag/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
