--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -8,6 +8,11 @@
     <key>NSPhotoLibraryAddUsageDescription</key>
     <string>We need permission to save images to your photo library.</string>
 
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs access to location to verify your state for regulatory compliance.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app needs access to location to verify your state for regulatory compliance.</string>
+
 
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
